--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,16 +26,17 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
     container_name: es5
     environment:
-      - node.name=es5_01
-      - cluster.name=es-docker-cluster
+      - node.name=elasticsearch5
+      - cluster.name=elasticsearch5
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
-      - "../volumes/elasticsearch7:/usr/share/elasticsearch/data"
+      - "../volumes/elasticsearch5:/usr/share/elasticsearch/data"
     ports:
       - 9200:9200
 
