Add mail catcher for local email test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,3 +58,9 @@ services:
     ports:
       - 9200:9200
 
+  mailcatcher:
+    restart: always
+    image: schickling/mailcatcher
+    ports:
+      - '1025:1025'
+      - '1080:1080'
