--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   pg:
     restart: always
     image: postgres:12.1
+    container_name: postgres
     ports:
       - 5432:5432
     volumes:
@@ -14,6 +15,7 @@ services:
   redis:
     restart: always
     image: redis:6.0-alpine
+    container_name: redis
     ports:
       - 6379:6379
     volumes:
@@ -23,8 +25,9 @@ services:
   # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
   # https://www.docker.elastic.co/r/elasticsearch?limit=50&offset=50&show_snapshots=false&ordering=created_at
   es5:
+    restart: always
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.0
-    container_name: es5
+    container_name: elasticsearch_5.6
     environment:
       - node.name=elasticsearch5
       - cluster.name=elasticsearch5
@@ -41,8 +44,9 @@ services:
       - 9200:9200
 
   es7:
+    restart: always
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
-    container_name: es7
+    container_name: elasticsearch_7.15
     environment:
       - node.name=elasticsearch7
       - cluster.name=elasticsearch7
@@ -56,9 +60,10 @@ services:
     volumes:
       - "../volumes/elasticsearch7:/usr/share/elasticsearch/data"
     ports:
-      - 9200:9200
+      - 9500:9200
 
   mailcatcher:
+    container_name: mailcatcher
     restart: always
     image: schickling/mailcatcher
     ports:
