--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,13 @@ services:
     ports:
       - '1025:1025'
       - '1080:1080'
+  mongo:
+    image: mongo:latest
+    container_name: mongo
+    restart: always
+    ports:
+      - 8081:8081
+      - 27017:27017
+    volumes:
+      - ../volumes/mongodb:/data/db
+    
